# filter-iterator

./: .travis.yml  .ycm_extra_conf.py  CHANGELOG.rst  CMakeLists.txt  Makefile  README.rst
include/filter-iterator/: filter_iterator.hpp
test/: CMakeLists.txt
test/src/: filter_iterator_test.cpp
